--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -10,13 +10,6 @@
 	padding: 55px 50px;
 }
 
-.footer-distributed .footer-left,
-.footer-distributed .footer-center,
-.footer-distributed .footer-right{
-	display: inline-block;
-	vertical-align: top;
-}
-
 .footer-distributed .footer-left{
 	width: 40%;
 }
@@ -27,127 +20,35 @@
 	font-weight: normal;
 	margin: 0;
 	padding: 10px;
-}
-
-.footer-distributed .footer-center{
-	width: 35%;
-}
-
-.footer-distributed .footer-center i{
-	background-color:  #33383b;
-	color: #ffffff;
-	font-size: 25px;
-	width: 38px;
-	height: 38px;
-	border-radius: 50%;
 	text-align: center;
-	line-height: 42px;
-	margin: 10px 15px;
-	vertical-align: middle;
 }
 
-.footer-distributed .footer-center i.fa-envelope{
-	font-size: 17px;
-	line-height: 38px;
-}
-
-.footer-distributed .footer-center p{
-	display: inline-block;
-	color: #ffffff;
-	font-weight:400;
-	vertical-align: middle;
-	margin:0;
-}
-
-.footer-distributed .footer-center p span{
-	display:block;
-	font-weight: normal;
-	font-size:14px;
-	line-height:2;
-}
-
-.footer-distributed .footer-center p a{
-	color:  lightseagreen;
-	text-decoration: none;;
-}
-
-.footer-distributed .footer-links a:before {
-	content: "|";
-	font-weight:300;
-	font-size: 20px;
-	left: 0;
-	color: #fff;
-	display: inline-block;
-	padding-right: 5px;
-}
-
-.footer-distributed .footer-links .link-1:before {
-	content: none;
-}
-
-.footer-distributed .footer-right{
-	width: 20%;
-}
-
-.footer-distributed .footer-company-about{
-	line-height: 20px;
-	color:  whitesmoke;
-	font-size: 13px;
-	font-weight: normal;
-	margin: 0;
-}
-
-.footer-distributed .footer-company-about span{
-	display: block;
-	color:  #ffffff;
-	font-size: 20px;
-	font-weight: bold;
-	margin-bottom: 20px;
-}
-
-.footer-distributed .footer-icons{
-	margin-top: 25px;
-}
-
-.footer-distributed .footer-icons a{
-	display: inline-block;
-	width: 35px;
-	height: 35px;
-	cursor: pointer;
-	background-color:  #33383b;
-	border-radius: 2px;
-
-	font-size: 20px;
-	color: #ffffff;
+.wrapper-logo-f{
 	text-align: center;
-	line-height: 35px;
-
-	margin-right: 3px;
-	margin-bottom: 5px;
+}
+.footer-logo{
+	background-color: white;
+	padding: 0px 20px 0px 20px;
 }
 
 @media (max-width: 880px) {
 
-	.footer-distributed{
-		font: bold 14px sans-serif;
-	}
-
-	.footer-distributed .footer-left,
-	.footer-distributed .footer-center,
-	.footer-distributed .footer-right{
+	.footer-distributed .footer-left{
 		display: block;
 		width: 100%;
-		margin-bottom: 40px;
+		margin-bottom: 50px;
 		text-align: center;
 	}
 
-	.footer-distributed .footer-center i{
-		margin-left: 0;
+	.footer-logo{
+		max-width: 100%;
+		height: auto;
+		padding: 0px 5px 0px 5px;
 	}
 
-}
-
-.footer-logo{
-	background-color: white;
-	padding: 10px;
+	.wrapper-logo-f{
+		display: block;
+		width: 100%;
+		text-align: center;
+	}
 }
