--- a/src/Components/Servicios/Servicios.css
+++ b/src/Components/Servicios/Servicios.css
@@ -46,7 +46,7 @@
 
 .procesos-contables, .procesos-remuneraciones, .asesoria-laboral{
     font-size: 2vw;
-    padding: 50px;
+    padding: 20px 90px 90px 90px;
 }
 
 .procesos-contables{
